docs-archive/apache-airflow-providers-databricks/7.13.0/_sources/_api/airflow/providers/databricks/utils/databricks/index.rst.txt
airflow.providers.databricks.utils.databricks
=============================================

.. py:module:: airflow.providers.databricks.utils.databricks


Functions
---------

.. autoapisummary::

   airflow.providers.databricks.utils.databricks.normalise_json_content
   airflow.providers.databricks.utils.databricks.extract_failed_task_errors
   airflow.providers.databricks.utils.databricks.extract_failed_task_errors_async
   airflow.providers.databricks.utils.databricks.validate_trigger_event


Module Contents
---------------

.. py:function:: normalise_json_content(content, json_path = 'json')

   Normalize content or all values of content if it is a dict to a string.

   The function will throw if content contains non-string or non-numeric non-boolean
   types. The reason why we have this function is because the ``self.json`` field
   must be a dict with only string values. This is because ``render_template`` will
   fail for numerical values.

   The only one exception is when we have boolean values, they can not be converted
   to string type because databricks does not understand 'True' or 'False' values.

   XComArg instances are passed through as-is because they are resolved at runtime
   via template rendering.


.. py:function:: extract_failed_task_errors(hook, run_info, run_state)

   Extract error information from failed tasks in a Databricks run (synchronous version).

   :param hook: Databricks hook instance for making API calls
   :param run_info: Run information dictionary from Databricks API
   :param run_state: Run state object
   :return: List of failed task information with task_key, run_id, and error


.. py:function:: extract_failed_task_errors_async(hook, run_info, run_state)
   :async:


   Extract error information from failed tasks in a Databricks run (asynchronous version).

   :param hook: Databricks hook instance for making API calls
   :param run_info: Run information dictionary from Databricks API
   :param run_state: Run state object
   :return: List of failed task information with task_key, run_id, and error


.. py:function:: validate_trigger_event(event)

   Validate correctness of the event received from DatabricksExecutionTrigger.

   See: :class:`~airflow.providers.databricks.triggers.databricks.DatabricksExecutionTrigger`.


